syntax = "proto3";
package hyperlane.warp.v1;

option go_package = "github.com/bcp-innovations/hyperlane-cosmos/x/warp/types";

import "cosmos/msg/v1/msg.proto";
import "gogoproto/gogo.proto";
import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";

// Msg defines the module Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // CreateCollateralToken ...
  rpc CreateCollateralToken(MsgCreateCollateralToken)
      returns (MsgCreateCollateralTokenResponse);

  // CreateSyntheticToken ...
  rpc CreateSyntheticToken(MsgCreateSyntheticToken)
      returns (MsgCreateSyntheticTokenResponse);

  // RemoteTransfer ...
  rpc RemoteTransfer(MsgRemoteTransfer) returns (MsgRemoteTransferResponse);
}

// MsgCreateCollateralToken ...
message MsgCreateCollateralToken {
  option (cosmos.msg.v1.signer) = "creator";
  option (amino.name) = "hyperlane/warp/MsgCreateCollateralToken";

  // sender is the message sender.
  string creator = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  string origin_mailbox = 2;
  string origin_denom = 3;

  uint32 receiver_domain = 4;
  string receiver_contract = 5;

  string ism_id = 6;
}

// MsgCreateCollateralTokenResponse ...
message MsgCreateCollateralTokenResponse {}

// MsgCreateSyntheticToken ...
message MsgCreateSyntheticToken {
  option (cosmos.msg.v1.signer) = "creator";
  option (amino.name) = "hyperlane/warp/MsgCreateSyntheticToken";

  // sender is the message sender.
  string creator = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  string origin_mailbox = 2;

  uint32 receiver_domain = 3;
  string receiver_contract = 4;

  string ism_id = 5;
}

// MsgCreateSyntheticTokenResponse ...
message MsgCreateSyntheticTokenResponse {}

// MsgRemoteTransfer ...
message MsgRemoteTransfer {
  option (cosmos.msg.v1.signer) = "sender";
  option (amino.name) = "hyperlane/warp/MsgRemoteTransfer";

  string sender = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string token_id = 2;
  string recipient = 3;
  string amount = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];

  // IGP
  string igp_id = 5;
  string gas_limit = 6 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string max_fee = 7 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// MsgRemoteTransferResponse ...
message MsgRemoteTransferResponse { string message_id = 1; }
